# zecwallet-light-cli

./: Cargo.toml  README.md  zecwallet.conf.example
cli/: Cargo.toml
cli/src/: client.rs  config.rs  lib.rs  main.rs  server.rs
lib/src/: commands.rs  lib.rs  lightclient.rs  lightwallet.rs
lib/src/lightclient/: lightclient_config.rs
