[workspace]
members = [
    "lib",
    "cli",
]

[profile.release]
debug = false

[patch.crates-io]
zcash_address = { path = "../librustzcash-zwl/components/zcash_address" }
zcash_primitives = { path = "../librustzcash-zwl/zcash_primitives" }
zcash_client_backend = { path = "../librustzcash-zwl/zcash_client_backend" }
zcash_note_encryption = { path = "../librustzcash-zwl/components/zcash_note_encryption" }
zcash_encoding = { path = "../librustzcash-zwl/components/zcash_encoding" }
zcash_proofs = { path = "../librustzcash-zwl/zcash_proofs" }
orchard = { git = "https://github.com/adityapk00/orchard", rev = "0a960a380f4e9c3472c9260f3df61cd5e50d51b0" }

#zcash_address = { path = "../librustzcash/components/zcash_address/" }
#zcash_primitives = { path = "../librustzcash/zcash_primitives/" }
#zcash_client_backend = { path = "../librustzcash/zcash_client_backend" }
#zcash_note_encryption = { path = "../librustzcash/components/zcash_note_encryption" }
#zcash_encoding = { path = "../librustzcash/components/zcash_encoding/" }
#zcash_proofs = { path = "../librustzcash/zcash_proofs/" }
#orchard = { path = "../orchard/" }